# UAV-VisionLoc-Deploy

./: .gitignore  README.md  config.json  config.yaml  run.sh  runsh.service
cpp/: .run_video.sh.swp  CMakeLists.txt  build.sh  callgrind.out.63786  config.yaml  log.txt  run.sh  run_video.sh  startup_uvl.sh
cpp/faiss-demo/: readme.md
cpp/faiss-demo/cpp/: demo  faiss_demo.cpp
cpp/faiss-demo/py/: faiss_demo.py
cpp/include/: aair.h  load_database.h  postprocess.h  preprocess.h  utils.h
cpp/require/: libdl.so.2  libudev.so.1  libuvc.so.0  libyaml-cpp.so.0.6
cpp/src/: .main.cc.swp  demo.cc  load_database.cc  main.cc  main_mjpeg.cc  postprocess.cc  preprocess.cc  utils.cc
docs/: UAV-VisionLoc文档说明-徐建格.docx  修改可用频率.md
python/: demo.py  demo1.py  demo2.py  demo3.py  eval.py  main.py  requirements.txt  test.py
python/memory/: memory.md
python/profile/: output.md  profile.py  profile_output.prof  verbose_log.txt
python/py_utils/: datasets.py  logger_config.py  pre_process.py  process_manager.py  rk_infer.py  rknn_executor.py  utils.py
